[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/BattleFieldScene.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamic_bebas.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/tileset_from_scene.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/MobScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/BuildingMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/target.png" type="Texture" id=6]
[ext_resource path="res://assets/images/SpriteSet.png" type="Texture" id=7]
[ext_resource path="res://assets/images/play-button.png" type="Texture" id=8]
[ext_resource path="res://assets/images/construct-button.png" type="Texture" id=9]
[ext_resource path="res://assets/images/save-button.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="BattleFieldScene" type="Node2D"]
script = ExtResource( 1 )
mob_scene = ExtResource( 4 )

[node name="GlobalBackground" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 720.0
color = Color( 0.407843, 0.423529, 0.427451, 1 )

[node name="BattleField" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 720.0
color = Color( 0.380392, 0.670588, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTileMap" type="TileMap" parent="BattleField"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 50, 50 )
cell_tile_origin = 1
format = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MainTileMap" type="TileMap" parent="BattleField"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 50, 50 )
cell_tile_origin = 1
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 1, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 65536, 8, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 8, 0, 131072, 8, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 8, 0, 196608, 8, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 8, 0, 262144, 8, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 8, 0, 327680, 8, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 8, 0, 393216, 8, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 8, 0, 458752, 8, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 8, 0, 524288, 8, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 8, 0, 589824, 8, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 8, 0, 655360, 8, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 8, 0, 720896, 8, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 8, 0, 786432, 8, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 8, 0, 851968, 8, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 8, 0, 917504, 8, 0, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 1, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0 )

[node name="mob_create_timer" type="Timer" parent="."]
wait_time = 0.4
__meta__ = {
"_editor_description_": ""
}

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2( 225, 725 )

[node name="ExitCollisionShape" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="ExitArea"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.0705882, 0.0470588, 0.47451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 14.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0
Gold: 0
Level: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenu" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 510 )

[node name="BuildingMenuButton" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 150.0
margin_right = 450.0
margin_bottom = 250.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BuildingMenuButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWaveButton" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 250.0
margin_right = 450.0
margin_bottom = 350.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="StartWaveButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )

[node name="SaveGameButton" type="TextureButton" parent="."]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SaveGameButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )

[node name="LoadGameButton" type="Button" parent="."]
visible = false
margin_left = 10.0
margin_top = 300.0
margin_right = 110.0
margin_bottom = 340.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 2 )
text = "Load game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset Game" type="Button" parent="."]
visible = false
margin_left = 50.0
margin_top = 100.0
margin_right = 153.0
margin_bottom = 140.0
rect_rotation = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Reset game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionPreview" type="Node2D" parent="."]
position = Vector2( 350, 49 )

[node name="ColorRect" type="ColorRect" parent="SelectionPreview"]
margin_left = -1.0
margin_top = -1.0
margin_right = 51.0
margin_bottom = 51.0
color = Color( 0.239216, 0.317647, 0.619608, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="SelectionPreview"]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="SelectionPreview/Button"]
visible = false
position = Vector2( 50, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 50, 0, 50, 100 )
[connection signal="gui_input" from="BattleField" to="." method="_on_BattleField_gui_input"]
[connection signal="timeout" from="mob_create_timer" to="." method="_on_mob_create_timer_timeout"]
[connection signal="area_entered" from="ExitArea" to="." method="_on_ExitArea_area_entered"]
[connection signal="building_target_was_selected" from="BuildingMenu" to="." method="_on_BuildingMenu_building_target_was_selected"]
[connection signal="close_menu" from="BuildingMenu" to="." method="_on_BuildingMenu_close_menu"]
[connection signal="pressed" from="BuildingMenuButton" to="." method="_on_BuildingMenuButton_pressed"]
[connection signal="pressed" from="StartWaveButton" to="." method="_on_StartWaveButton_pressed"]
[connection signal="pressed" from="SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Reset Game" to="." method="_on_Reset_Game_pressed"]
[connection signal="pressed" from="SelectionPreview/Button" to="." method="_on_SelectionPreview_pressed"]
